# RedisIrisXadk

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  pyproject.toml
data/: README.md
docs/: Cloud_Redis_Agent_Memory_Extraction_Prompt.txt  architecture.mmd  demo.md  demo2.md  temporal.md
scripts/: benchmark_agent_memory_health.py  check_gcp.sh  configure_gcp_secrets.sh  create_memory_bank.py  deploy_gcp.sh  deploy_vm.sh  generate_dataset.py  reset_demo.py  seed_managed_memories.py  seed_redis.py  seed_scale_memories.py  setup_context_retriever.py  vm_startup.sh
tests/: test_core.py
valueharbor_agent/: __init__.py  agent.py  api.py  config.py  context_models.py  demo_data.py  services.py  tools.py
valueharbor_agent/static/: index.html
valuewholesale_agent/: __init__.py  agent.py  api.py  config.py  context_models.py  demo_data.py  services.py  tools.py
valuewholesale_agent/static/: index.html
