[project]
name = "valuewholesale-shopping-agent"
version = "0.1.0"
description = "A Redis IRIS shopping-agent workshop built with Google ADK for GCP."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "context-surfaces>=0.0.1",
  "fastapi>=0.116.0",
  "google-adk>=1.8.0",
  "google-cloud-aiplatform[agent_engines,adk]>=1.112.0",
  "google-genai>=1.30.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.10.0",
  "redis>=6.2.0",
  "redis-agent-memory>=0.1.0",
  "redisvl>=0.23,<0.24",
  "sentence-transformers>=5.1,<6",
  "torch>=2.1,<3",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
